# data_structure_and_algorithm

./: README.md
Goldbach/: main.c
array/: CMakeLists.txt  main.c
backpack/: CMakeLists.txt  main.c
backtrack/: CMakeLists.txt  main.c
basic_c/Goldbach/: CMakeLists.txt
basic_c/file/: CMakeLists.txt
basic_c/function_pointer/: main.bc  main.c  main.ll.s
basic_c/magic_square/: matrix.c  matrix.h
basic_c/pi/: main.c
basic_c/volume/: CMakeLists.txt  main.c
c_string/: CMakeLists.txt  main.c
check/: CMakeLists.txt  sub.c  sub.h  test_main.c  test_sub.c  unit_test.h
enum/: CMakeLists.txt  main.c
file/: main.c  test.txt
function_pointer/: main.ll
iterative/: CMakeLists.txt  common_multiple_divisor.h  factorization.h  main.c  sqrt.h
list/: CMakeLists.txt  list.h  main.c
magic_square/: CMakeLists.txt  main.c  unit_test_main.c
queue/: CMakeLists.txt  README.md  dance_party.c  main.c  queue.h  result.md
recursion/: CMakeLists.txt  dec_to_bin.h  fibonacci.c  hanoi.c  integer_factorization.c  main.c  queen.c  step.c
sort/: CMakeLists.txt  main.c  sort.h
stack/: CMakeLists.txt  main.c  number_system_conversion.c  stack.h  symbol_matching.c
string/: CMakeLists.txt  main.c  string.h
struct/: CMakeLists.txt  main.c
tree/: CMakeLists.txt  advance.c  advance_tree.h  btree.h  flex_array.h  main.c
